# umet-reports

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  reporte_CESDEL-CARRERAS(NEW)_20250630-3.xlsx  reporte_CESDEL-POST(NEW)_20250630-1.xlsx  reporte_cuantitativo.xlsx
.github/workflows/: debts-ci.yml  docker-image.yml
data/: 16-6-25-pm.json  16-6-25.json  17-6-25.json  17-6-25_1035.json
debts/: main.py
debts/reports/: deudas-16-06-2025.xlsx  deudas-17-06-2025.xlsx  deudas-17-06-2025_1037.xlsx
debts/src/: build_report.py  db.py  moodle_db.py  schemas.py  settings.py  tasks.py
debts/src/logging/: intercept_handler.py  logger_factory.py
debts/src/utils/: mailer.py  security.py  sna_api.py  suspend_user.py  suspended_data.py
debts/templates/: activated_user.html  confirm_account.html  debt_status_mssg.html  error_SNAPI_comm.html  password_recovery.html  password_recovery_js .html  password_temp.html  report.html  suspended_user.html  suspended_user2.html
educontrol/: main.py
educontrol/src/: build_report.py  build_report_json.py  build_report_json_flow.py  extract_data_flow.py  schemas.py  settings.py
educontrol/src/utils/: category_finder.py  db.py  mailer.py  moodle_client.py  parsers.py  redis_client.py
grades/: README.md  main.py
grades/src/: build_report.py  extract_data_flow.py  grade_report_flow.py  parsers.py  settings.py
grades/src/utils/: moodle_client.py
